stylesheets/application.css
.output {
  padding: 20px;
  overflow: scroll;
  background-color: #1A1A1A;
  color: white;
}

code {
  font-size: 12px;
  font-family: "Monaco", "Inconsolata", "Consolas", monospace;
  -webkit-user-select: text;
  user-select: text;
}

@-webkit-keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(359deg);
  }
}

.spin {
  -webkit-animation: spin 5s infinite linear;
}

